ran 3d-vae-gan for 500+ epochs but limited by 16x16x16 output

--- a/notebooks/thingi10k_eda.ipynb
+++ b/notebooks/thingi10k_eda.ipynb
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
        "Name: tags, Length: 9946, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,355 +546,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>['rover', 'spider', 'walking']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>['articulado', 'ball_jointed', 'cool', 'doll',...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>['christmas', 'gift', 'holiday', 'makerbot', '...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>['laser', 'laser_chess', '3D', 'board_game', '...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>['flute', 'music', 'recorder', 'empire_state_b...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>['clock', 'desk_clock', 'divers_watch', 'watch']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>['bird', 'birdhouse', 'BirdhouseChallenge', 'B...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>['interesting']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>['optimus_prime', 'tardis', 'toy', 'transformer']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>['architecture', 'budmen', 'cloud', 'cloud_fac...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>['animal', 'sculpture']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>['board', 'chess', 'dragon', 'fantasy', 'fire'...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>['Action_Figure', 'anime', 'ModioChallenge', '...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>['hex', 'screw', 'star', 'toy']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>['4-8-8-4', 'Locomotive', 'railroad', 'scale_m...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>['balloon', 'whistle_goes_wooo_WOOOO']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>['gyroscope', 'walking_toy']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>['3D', 'prototype', 'typeface']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>['clock', 'escapement', 'Gear', 'handle', 'mec...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>['cryptex', 'LulzBot', 'puzzel', 'puzzle', 'toy']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>['architecture', 'Cathedral', 'design_week', '...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>['atom', 'bohr', 'chemistry', 'customizer', 'e...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>['beach', 'bucket', 'grovel', 'holiday', 'kids...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>['futur', 'makerbot', 'moto']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>['3D', 'CNC_Machine', 'featured', 'reprap']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>['android', 'arduino', 'autonomous', 'battery'...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>['mold', 'molds', 'snow', 'snowman', 'snowmen'...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>['Castle', 'construction_kit', 'LEGO', 'opensc...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>['box', 'container', 'gift', 'Heart', 'puzzle'...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9916</th>\n",
-       "      <td>['2Color', 'amphibian', 'dualstrusion', 'frog'...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9917</th>\n",
-       "      <td>['aircraft', 'air_powered', 'balloon', 'design...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9918</th>\n",
-       "      <td>['arduino', 'customizable', 'customizer', 'lam...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9919</th>\n",
-       "      <td>['advent_calendar', 'christmas', 'collection',...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9920</th>\n",
-       "      <td>['Articulated', 'ball_joint', 'BJD', 'doll', '...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9921</th>\n",
-       "      <td>['openscad', 'Two_Color']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9922</th>\n",
-       "      <td>['burger', 'cooking', 'food', 'kitchen', 'mould']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9923</th>\n",
-       "      <td>['flower', 'vase']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9924</th>\n",
-       "      <td>['art', 'gears', 'kinetic', 'sketchup', 'sprin...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9925</th>\n",
-       "      <td>['atom', 'bohr', 'chemistry', 'customizer', 'e...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9926</th>\n",
-       "      <td>['antique', 'autumn', 'bird', 'fall', 'leaf', ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9927</th>\n",
-       "      <td>['3dhubs', 'desk', 'math', 'polyhedra']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9928</th>\n",
-       "      <td>['Champagne_Glass', 'glass']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9929</th>\n",
-       "      <td>['Castle', 'construction_kit', 'LEGO', 'opensc...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9930</th>\n",
-       "      <td>['Castle', 'construction_kit', 'LEGO', 'opensc...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9931</th>\n",
-       "      <td>['3D', 'art', 'Deadmau5', 'jewelry', 'laser', ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9932</th>\n",
-       "      <td>['box', 'key', 'Lock', 'pick', 'safe', 'treasu...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9933</th>\n",
-       "      <td>['2Color', 'blatt', 'dualstrusion', 'meat', 's...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9934</th>\n",
-       "      <td>['LEGO', 'reindeer', 'santa', 'sleigh', 'xmas']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9935</th>\n",
-       "      <td>['3D', 'applications', 'automata', 'automaton'...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9936</th>\n",
-       "      <td>['robot', 'tank', 'Tracked']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9937</th>\n",
-       "      <td>['1to24scale', 'dollhouse', 'furniture', 'tosc...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9938</th>\n",
-       "      <td>['complex', 'math', 'pva', 'support', 'dualstr...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9939</th>\n",
-       "      <td>['barspin', 'Daniel_Noree', 'openrc', 'radioco...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9940</th>\n",
-       "      <td>['3d_printer', 'car', 'star_wars', 'X_Wing', '...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9941</th>\n",
-       "      <td>['iPad', 'Ipad_mini', 'iPad_Stand', 'stand']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9942</th>\n",
-       "      <td>['3D', '3dprint', 'art', 'cellular', 'makerbot...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9943</th>\n",
-       "      <td>['baking', 'cookies', 'cookie_cutter', 'custom...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9944</th>\n",
-       "      <td>['Action_Figure', 'articulable']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9945</th>\n",
-       "      <td>['AMAO', 'bear', 'bear__Low_poly']</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>9946 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                      0\n",
-       "0                        ['rover', 'spider', 'walking']\n",
-       "1     ['articulado', 'ball_jointed', 'cool', 'doll',...\n",
-       "2     ['christmas', 'gift', 'holiday', 'makerbot', '...\n",
-       "3     ['laser', 'laser_chess', '3D', 'board_game', '...\n",
-       "4     ['flute', 'music', 'recorder', 'empire_state_b...\n",
-       "5                                                   NaN\n",
-       "6      ['clock', 'desk_clock', 'divers_watch', 'watch']\n",
-       "7     ['bird', 'birdhouse', 'BirdhouseChallenge', 'B...\n",
-       "8                                       ['interesting']\n",
-       "9     ['optimus_prime', 'tardis', 'toy', 'transformer']\n",
-       "10    ['architecture', 'budmen', 'cloud', 'cloud_fac...\n",
-       "11                              ['animal', 'sculpture']\n",
-       "12    ['board', 'chess', 'dragon', 'fantasy', 'fire'...\n",
-       "13    ['Action_Figure', 'anime', 'ModioChallenge', '...\n",
-       "14                      ['hex', 'screw', 'star', 'toy']\n",
-       "15    ['4-8-8-4', 'Locomotive', 'railroad', 'scale_m...\n",
-       "16               ['balloon', 'whistle_goes_wooo_WOOOO']\n",
-       "17                         ['gyroscope', 'walking_toy']\n",
-       "18                      ['3D', 'prototype', 'typeface']\n",
-       "19    ['clock', 'escapement', 'Gear', 'handle', 'mec...\n",
-       "20    ['cryptex', 'LulzBot', 'puzzel', 'puzzle', 'toy']\n",
-       "21    ['architecture', 'Cathedral', 'design_week', '...\n",
-       "22    ['atom', 'bohr', 'chemistry', 'customizer', 'e...\n",
-       "23    ['beach', 'bucket', 'grovel', 'holiday', 'kids...\n",
-       "24                        ['futur', 'makerbot', 'moto']\n",
-       "25          ['3D', 'CNC_Machine', 'featured', 'reprap']\n",
-       "26    ['android', 'arduino', 'autonomous', 'battery'...\n",
-       "27    ['mold', 'molds', 'snow', 'snowman', 'snowmen'...\n",
-       "28    ['Castle', 'construction_kit', 'LEGO', 'opensc...\n",
-       "29    ['box', 'container', 'gift', 'Heart', 'puzzle'...\n",
-       "...                                                 ...\n",
-       "9916  ['2Color', 'amphibian', 'dualstrusion', 'frog'...\n",
-       "9917  ['aircraft', 'air_powered', 'balloon', 'design...\n",
-       "9918  ['arduino', 'customizable', 'customizer', 'lam...\n",
-       "9919  ['advent_calendar', 'christmas', 'collection',...\n",
-       "9920  ['Articulated', 'ball_joint', 'BJD', 'doll', '...\n",
-       "9921                          ['openscad', 'Two_Color']\n",
-       "9922  ['burger', 'cooking', 'food', 'kitchen', 'mould']\n",
-       "9923                                 ['flower', 'vase']\n",
-       "9924  ['art', 'gears', 'kinetic', 'sketchup', 'sprin...\n",
-       "9925  ['atom', 'bohr', 'chemistry', 'customizer', 'e...\n",
-       "9926  ['antique', 'autumn', 'bird', 'fall', 'leaf', ...\n",
-       "9927            ['3dhubs', 'desk', 'math', 'polyhedra']\n",
-       "9928                       ['Champagne_Glass', 'glass']\n",
-       "9929  ['Castle', 'construction_kit', 'LEGO', 'opensc...\n",
-       "9930  ['Castle', 'construction_kit', 'LEGO', 'opensc...\n",
-       "9931  ['3D', 'art', 'Deadmau5', 'jewelry', 'laser', ...\n",
-       "9932  ['box', 'key', 'Lock', 'pick', 'safe', 'treasu...\n",
-       "9933  ['2Color', 'blatt', 'dualstrusion', 'meat', 's...\n",
-       "9934    ['LEGO', 'reindeer', 'santa', 'sleigh', 'xmas']\n",
-       "9935  ['3D', 'applications', 'automata', 'automaton'...\n",
-       "9936                       ['robot', 'tank', 'Tracked']\n",
-       "9937  ['1to24scale', 'dollhouse', 'furniture', 'tosc...\n",
-       "9938  ['complex', 'math', 'pva', 'support', 'dualstr...\n",
-       "9939  ['barspin', 'Daniel_Noree', 'openrc', 'radioco...\n",
-       "9940  ['3d_printer', 'car', 'star_wars', 'X_Wing', '...\n",
-       "9941       ['iPad', 'Ipad_mini', 'iPad_Stand', 'stand']\n",
-       "9942  ['3D', '3dprint', 'art', 'cellular', 'makerbot...\n",
-       "9943  ['baking', 'cookies', 'cookie_cutter', 'custom...\n",
-       "9944                   ['Action_Figure', 'articulable']\n",
-       "9945                 ['AMAO', 'bear', 'bear__Low_poly']\n",
-       "\n",
-       "[9946 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['rover', 'spider', 'walking']\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-b8e7a3057881>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtag\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mthingi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtags\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mall_tags\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+     ]
     }
    ],
+   "source": [
+    "all_tags = list()\n",
+    "for tag in thingi.df.tags:\n",
+    "    print(tag)\n",
+    "    all_tags += l\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "pd.DataFrame(thingi.df.tags.values.tolist())"
    ]
@@ -1250,6 +935,27 @@
     "# https://stackoverflow.com/questions/46391430/working-with-lists-in-pandas-applypd-series-doesnt-work-an-alternative-sol\n",
     "df = thingi.df.tags.str.strip('[]').str.replace(\"'\", \"\").str.split(', ', expand=True)\n",
     "print (df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-af754fc79077>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df.join"
    ]
   },
   {
