voxel vae training loop constructed but untested

--- a/notebooks/stl_voxel_vae.ipynb
+++ b/notebooks/stl_voxel_vae.ipynb
@@ -104,18 +104,14 @@
    "source": [
     "class VariationalAutoencoder():\n",
     "    \n",
-    "    def __init__(self, input_dim, latent_dim, keep_prob):\n",
+    "    def __init__(self, input_dim, latent_dim, learning_rate, keep_prob):\n",
     "        self.input_dim = input_dim\n",
     "        self.latent_dim = latent_dim\n",
-    "        self.keep_prob = keep_prob\n",
-    "\n",
-    "        self.ph_enc_input = tf.placeholder(tf.float32, shape=(None, 1, self.input_dim, self.input_dim, self.input_dim))\n",
-    "        self._encoder = make_encoder(self.ph_enc_input)\n",
-    "        self._decoder = make_decoder(self._encoder)\n",
-    "        \n",
+    "        self.learning_rate = learning_rate\n",
+    "        self.keep_prob = keep_prob        \n",
     "        return\n",
     "    \n",
-    "    def make_encoder(self, input_x, trainable):\n",
+    "    def _make_encoder(self, input_x, keep_prob, trainable):\n",
     "        \n",
     "        # tf conv3d: https://www.tensorflow.org/api_docs/python/tf/layers/conv3d\n",
     "        # tf glorot init: https://www.tensorflow.org/api_docs/python/tf/glorot_uniform_initializer\n",
@@ -190,12 +186,13 @@
     "        z_sig = 0.5 * tf.layers.dense(x, units=n_latent)\n",
     "        \n",
     "        # TODO: what is epsilon used for?\n",
-    "        epsilon = tf.random_normal(tf.stack([tf.shape(x)[0], n_latent]))\n",
+    "        # epsilon is a random draw from the latent space\n",
+    "        epsilon = tf.random_normal(tf.stack([tf.shape(input_x)[0], self.latent_dim]))\n",
     "        z = z_mu + tf.multiply(epsilon, tf.exp(z_sig))\n",
     "\n",
-    "        return z\n",
+    "        return z, z_mu, z_sig\n",
     "    \n",
-    "    def make_decoder(self, input_z, trainable):\n",
+    "    def _make_decoder(self, input_z, trainable):\n",
     "        \n",
     "        # There is some magic in the Example VAE that adds conditional input based on the\n",
     "        # class of the image. We do not have that luxury as we are attempting to do this\n",
@@ -266,8 +263,78 @@
     "        \n",
     "        return nn_output\n",
     "    \n",
+    "    def _make_loss(self, enc_input, dec_output, z_mu, z_sig):\n",
+    "        \"\"\"\n",
+    "        Info on loss in VAE:\n",
+    "          * https://stats.stackexchange.com/questions/332179/how-to-weight-kld-loss-vs-reconstruction-loss-in-variational-auto-encoder\n",
+    "          \n",
+    "        Args:\n",
+    "            encoder_input: tensor, input tensor into VAE\n",
+    "            decoder_output: tensor, decoded output tensor from VAE\n",
+    "            kl_div_weight: float, weight for KL Divergence loss when computing total loss\n",
+    "            recon_weight: float, weight for reconstruction loss when computing total loss\n",
+    "\n",
+    "        Return:\n",
+    "            float, \n",
+    "        \"\"\"\n",
+    "        reconstruction_loss = tf.reduce_sum(tf.squared_difference(tf.reshape(decoder_output, (-1, self.input_dim ** 3)),\n",
+    "                                                          tf.reshape(encoder_input, (-1, self.input_dim ** 3))), 1)\n",
+    "\n",
+    "        KL_divergence = -0.5 * tf.reduce_sum(1.0 + 2.0 * z_sig - z_mu ** 2 - tf.exp(2.0 * z_sig), 1)\n",
+    "\n",
+    "        mean_KL = tf.reduce_sum(KL_divergence)\n",
+    "        mean_recon = tf.reduce_sum(reconstruction_loss)\n",
+    "\n",
+    "        # tf reduce_mean: https://www.tensorflow.org/api_docs/python/tf/math/reduce_mean\n",
+    "        loss = tf.reduce_mean(alpha_1 * KL_divergence + alpha_2 * reconstruction_loss)\n",
+    "        \n",
+    "        optimizer = tf.train.AdamOptimizer(learning_rate=self.learning_rate).minimize(loss)\n",
+    "\n",
+    "        return loss, optimizer\n",
+    "\n",
+    "    def _init_graph(self, x_encoder_in, trainable):\n",
+    "        enc_output, enc_mu, enc_sig = self._make_encoder(x_encoder_in, trainable)\n",
+    "        dec_output = self._make_decoder(enc_output, trainable)\n",
+    "        return self._make_loss(enc_output, dec_output, enc_mu, enc_sig)\n",
+    "        \n",
+    "    def train(self, generator, epochs=10, display_step=1, save_step=1):\n",
+    "        \n",
+    "        input_x = tf.placeholder(tf.float32, shape=(None, 1, self.input_dim, self.input_dim, self.input_dim))\n",
+    "        keep_prob = tf.placeholder(dtype=tf.float32)\n",
+    "        trainable = tf.placeholder(dtype=tf.bool)\n",
+    "\n",
+    "        loss, optimizer = self._init_graph(input_x, keep_prob, trainable)\n",
+    "\n",
+    "        start = time.time()\n",
+    "        for epoch_num, epoch in enumerate(range(epochs)):\n",
+    "\n",
+    "            for batch_num, batch in enumerate(generator()):\n",
+    "                \n",
+    "                #print('Epoch: {}, Batch: {}'.format(epoch_num, batch_num))\n",
+    "                if len(batch) != self.batch_size:\n",
+    "                    # make sure we do not feed an unexpected batch size to the network\n",
+    "                    continue\n",
+    "                \n",
+    "                opt, cost = self.sess.run((self.optimizer, self.cost),\n",
+    "                                          feed_dict={input_x: batch, keep_prob=self.keep_prob, trainable: True})\n",
+    "                \n",
+    "            if (epoch + 1) % display_step == 0:\n",
+    "                print(\"Epoch:\", '%04d' % (epoch + 1), \n",
+    "                      \"Cost=\", \"{:.9f}\".format(cost),\n",
+    "                      \"Elapsed time: {} mins\".format((time.time() - start) / 60))\n",
+    "                print('Generation Example:')\n",
+    "                self.visualize_reconstruction(batch[0])\n",
+    "\n",
+    "            if (epoch + 1) % save_step == 0:\n",
+    "                # Save the variables to disk.\n",
+    "                save_path = self.saver.save(self.sess, os.path.join(self.ckpt_dir, \"model_epoch-{}.ckpt\".format(epoch)))\n",
+    "                print(\"Model saved in path: {}\".format(save_path))\n",
+    "                                       \n",
+    "        return\n",
+    "\n",
     "    def __repr__(self):\n",
-    "        return\n"
+    "        return '<VariationalAutoencoder(input_dim={}, latent_dim={}, learning_rate={}, keep_prob={})>'.format(\n",
+    "            self.input_dim, self.latent_dim, self.learning_rate, self.keep_prob)\n"
    ]
   },
   {
